Fix DBOperations interface design and implement comprehensive ObjectManager enhancements
Corrected DBOperations interface by removing internal methods from public API and reverting ObjectManagerDB method access levels. Added modern Java 21 patterns, event system, query builder, bulk operations, NoSQL persistence layer support, and enhanced validation framework across all ObjectManager implementations.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>